--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
         <title><%= htmlWebpackPlugin.options.title %></title>
         <link rel="icon" href="public/favicon.ico">
         <meta property="og:image" content="public/thumbnail.jpg" />
+
+        <script type="module" src="https://js.arcgis.com/calcite-components/1.0.0-beta.94/calcite.esm.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/1.0.0-beta.94/calcite.css" />
+        <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/dark/main.css" />
     </head>
     <body>
         <div id='root'></div>
