fix(component): minor text update to CustomMapAttribution

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <title><%= htmlWebpackPlugin.options.title %></title>
         <link rel="icon" href="public/favicon.ico">
-        <meta property="og:image" content="public/thumbnail.jpg" />
+        <meta property="og:image" content="https://livingatlas.arcgis.com/landcoverexplorer/public/screenshot.png" />
 
         <script type="module" src="https://js.arcgis.com/calcite-components/1.0.0-beta.94/calcite.esm.js"></script>
         <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/1.0.0-beta.94/calcite.css" />
