--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
         <script type="module" src="https://js.arcgis.com/calcite-components/1.0.0-beta.94/calcite.esm.js"></script>
         <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/1.0.0-beta.94/calcite.css" />
         <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/dark/main.css" />
+        <script src="//mtags.arcgis.com/tags-min.js" async></script>
+        
     </head>
     <body>
         <div id='root'></div>
