--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,13 @@
         
     </head>
     <body>
-        <div id='root'></div>
+        <div id='root'>
+            <div class="theme-background flex items-center justify-center top-0 left-0 w-full h-full absolute">
+                <div class="text-custom-light-blue-90">
+                    <h4 class="text-2xl mb-4">Esri | Sentinel-2 Land Cover Explorer</h4>
+                    <h5>Loading...</h5>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
