--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
         <script type="module" src="https://js.arcgis.com/calcite-components/1.3.1/calcite.esm.js"></script>
         <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/1.3.1/calcite.css" />
-        <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/dark/main.css" />
+        <!-- <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/dark/main.css" /> -->
         <script src="//mtags.arcgis.com/tags-min.js" async></script>
         
     </head>
